Renaming and spacing issues

--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,23 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start; /* Align content to the top */
     height: 100vh;
+    padding-top: 0%; /* Adjusted padding to bring the title closer to the center */
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-top: 7%
 }
 
 h1 {
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translateX(-50%);
     color: #ffffff;
-    font-size: 2em;
+    font-size: 2.5em; /* Increased font size */
+    text-align: center;
+
 }
 
 .container {
@@ -264,7 +271,6 @@ button[disabled] {
 @media (max-width: 768px) {
     h1 {
         font-size: 1.5em;
-        top: 10%;
     }
 
     .container {
@@ -306,7 +312,6 @@ button[disabled] {
 @media (max-width: 480px) {
     h1 {
         font-size: 1.2em;
-        top: 5%;
     }
 
     .container {
